--- a/dad_hub/templates/bio_create.html
+++ b/dad_hub/templates/bio_create.html
@@ -1,9 +1,18 @@
 {% extends 'base.html' %} 
 {% block content %}
-<h1> Create Your Profile </h1>
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="submit" />
-</form>
+
+<div class="container">
+    <div class="row">
+        <div class="col">
+            
+            <h1> Create Your Profile </h1>
+            <form method="post">
+                {% csrf_token %}
+                {{form.as_p}}
+                <input class="btn btn-primary btn-sm" type="submit" value="submit" />
+            </form>
+            
+        </div>
+    </div>
+</div>
 {% endblock %}
