--- a/dad_hub/templates/bio_update.html
+++ b/dad_hub/templates/bio_update.html
@@ -1,9 +1,24 @@
 {% extends 'base.html' %} 
 {% block content %}
-<h1> Update Your Profile </h1>
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Make Changes" />
-</form>
+
+
+<div class="container">
+    <div class="row">
+        <div class="col">
+            {% if request.user == bio.user %}
+            
+            <h1> Update Your Profile </h1>
+            <form method="post">
+                {% csrf_token %}
+                {{form.as_p}}
+                <input class="btn btn-primary btn-sm" type="submit" value="Make Changes" />
+            </form>
+            {% else %}
+            <h3>Oops, are you lost?</h3>
+            <a href="/blurbs" class="btn btn-success btn-lg m-5">Back This Way</a>
+            {% endif %}
+        </div>
+    </div>
+</div>
+
 {% endblock %}
